# crossplatform_gfx_hal_example

./: .gitignore  Cargo.toml  README.md
ios/: build_rust_deps.sh  project.yml
ios/src/: Info.plist  main.m
rust/game_android/: Cargo.toml
rust/game_android/src/: main.rs
rust/game_bindings/: Cargo.toml  build.rs
rust/game_bindings/src/: lib.rs
rust/game_desktop/: Cargo.toml
rust/game_lib/: Cargo.toml  build.rs
rust/game_lib/src/: lib.rs
