[package]
name = "game_lib"
version = "0.1.0"
authors = ["Igor Shaposhnik"]
edition = "2018"

[features]
default = []
metal = ["gfx-backend-metal"]
gl = ["gfx-backend-gl"]
dx11 = ["gfx-backend-dx11"]
dx12 = ["gfx-backend-dx12"]
vulkan = ["gfx-backend-vulkan"]
unstable = []

[dependencies]
image = "0.21"
log = "0.4"
winit = "0.20.0-alpha4"
hal = { version = "0.4", package = "gfx-hal" }

[target.'cfg(debug_assertions)'.dependencies]
env_logger = "0.6"

[dependencies.gfx-backend-gl]
version = "0.4"
features = ["glutin"]
optional = true

[dependencies.gfx-backend-vulkan]
version = "0.4"
optional = true

[target.'cfg(any(target_os = "macos", all(target_os = "ios", target_arch = "aarch64")))'.dependencies.gfx-backend-metal]
version = "0.4"
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx11]
version = "0.4"
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
version = "0.4"
optional = true

[build-dependencies]
shaderc = "0.6"